# Projeto-Verx

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
scripts/: cleanup.ps1
src/yahoo_crawler/: __init__.py  api.py  cli.py  config.py
src/yahoo_crawler/application/: crawl_service.py  screener_crawler.py
src/yahoo_crawler/cache/: __init__.py  quote_cache.py  redis_quote_cache.py
src/yahoo_crawler/domain/: models.py
src/yahoo_crawler/infrastructure/: webdriver_factory.py  yahoo_client.py
src/yahoo_crawler/output/: csv_writer.py
src/yahoo_crawler/parsing/: screener_parser.py
src/yahoo_crawler/utils/: logging_config.py
tests/: test_api.py  test_cli.py  test_crawl_service.py  test_crawler_orchestration.py  test_csv_writer.py  test_parser.py  test_quote_cache.py  test_redis_quote_cache.py
tests/fixtures/: equities_missing_price.html  equities_sample.html
